# MyProjects

./: .gitignore  ChangeMain.asm  README.md  TODO.txt  go.mod  КП Рожнов БЗС2101.docx
C2_s21_stringplus-2-randinun/src/: Makefile
C2_s21_stringplus-2-randinun/src/func/: s21_insert.c  s21_string.h  s21_strlen.c  s21_to_lower.c  s21_to_upper.c  s21_trim.c
C2_s21_stringplus-2-randinun/src/sprinf/: main.c  s21_sprintf.h
C2_s21_stringplus-2-randinun/src/sprintf/: s21_sprintf.c  s21_sprintf.h
C2_s21_stringplus-2-randinun/src/sscanf/: s21_sscanf.c  s21_sscanf.h
C2_s21_stringplus-2-randinun/src/tests/: s21_tests.c  test_s21_funcs.h  test_s21_insert.c  test_s21_sprintf.c  test_s21_sscanf.c  test_s21_to_lower.c  test_s21_to_upper.c  test_s21_trim.c
C3_SimpleBashUtils-2-develop/src/cat/: Makefile  empty_cat.c  flags_cat.c  main.c  main.h
C3_SimpleBashUtils-2-develop/src/grep/: Makefile  PAF.c  flags_grep.c  main.c  main.h  regpat.txt
C4_s21_math-2-develop/src/: Makefile  s21_math.h
C4_s21_math-2-develop/src/func/: s21_abs.c  s21_acos.c  s21_asin.c  s21_atan.c  s21_ceil.c  s21_cos.c  s21_exp.c  s21_fabs.c  s21_floor.c  s21_fmod.c  s21_log.c  s21_pow.c  s21_sin.c  s21_sqrt.c  s21_supFunctions.c
C4_s21_math-2-develop/src/tests/: test_s21_abs.c  test_s21_acos.c  test_s21_asin.c  test_s21_atan.c  test_s21_ceil.c  test_s21_cos.c  test_s21_exp.c  test_s21_fabs.c  test_s21_floor.c  test_s21_fmod.c  test_s21_log.c  test_s21_pow.c  test_s21_sin.c  test_s21_sqrt.c  test_s21_tan.c  tests_math.c  tests_math.h
C5_s21_decimal-5-develop/src/: Makefile  s21_decimal.h
C5_s21_decimal-5-develop/src/tests/: another_test.c  arithmetic_test.c  convertors_test.c  helper_test.c  s21_tests.c  test.h
C6_s21_matrix-2-develop/src/: Makefile  s21_matrix.h  tests.c
C6_s21_matrix-2-develop/src/func/: s21_calc_complements.c  s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c  s21_helper.c  s21_inverse_matrix.c  s21_mult_matrix.c  s21_mult_number.c  s21_sub_matrix.c  (+3 more)
C7_SmartCalc_v1.0-1-develop/src/: Doxyfile  Makefile
C7_SmartCalc_v1.0-2-develop-src/src/: CMakeLists.txt
C7_SmartCalc_v1.0-2-develop-src/src/src/: Calculator.cpp  Calculator.h  Calculator_init.cpp  Credit.cpp  Credit.h  Deposit.cpp  Deposit.h  main.cpp
C7_SmartCalc_v1.0-2-develop-src/src/src/calc/: calculate.c  inf_to_post.c  list_proc.c  parser.c  s21_calculator.h
C7_SmartCalc_v1.0-2-develop-src/src/src/calc/banking/: credit.c
C7_SmartCalc_v1.0-2-develop-src/src/src/calc/test/: s21_test.c  s21_test.h
C7_SmartCalc_v1.0-2-develop-src/src/src/calc/test/cases/: test_arithmetic.c  test_x_error.c
C8_3DViewer_v1.0-1-develop/src/: Doxyfile  Makefile  s21_tests.c
CPP1_s21_matrixplus-1-develop/src/: Makefile  s21_help_funcs.cpp  s21_matrix_oop.cpp  s21_matrix_oop.h
Go_Day00-1/src/: main.go
Go_Day01-1/src/: go.mod  snapshot1.txt  snapshot2.txt
Go_Day02-1/src/: go.mod
Go_Day03-1/src/: go.mod  go.sum
Go_Day04-1/src/: go.mod
Go_Day05-1/src/: go.mod
Go_Day06-1/src/: admin_credentials.txt  go.mod  go.sum
Go_Day07-1/src/: Makefile  go.mod
Go_Day08-1/src/: go.mod
Go_Day09-1/src/: go.mod
Go_Team00-1/src/: Makefile  go.mod  go.sum
config/: local.json
pkg/config/: config.go
(+157 files in other folders)
